added style and And the components were ordered

--- a/src/stylesheets/aplication.css
+++ b/src/stylesheets/aplication.css
@@ -1,1 +1,14 @@
 @import '~antd/dist/antd.css';
+
+.ant-btn-options{
+  border: none;
+  background-color: transparent;
+  color: white;
+}
+
+.site-layout-content {
+  min-height: 280px;
+  padding: 24px;
+  background-color: #f8f8f8;
+  border-top: solid 1px #EDE9E9;
+}
