Add Last style for the component Header

--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -1,6 +1,7 @@
 .ant-layout-header{
   display: flex;
-  background-color: #2E52F8;
+  background: linear-gradient(270deg, #56A7F2 27.97%, rgba(255, 255, 255, 0) 83.44%), #2E52F8;
+  box-shadow: 1px 0px 4px rgba(0, 0, 0, 0.15);
   align-items: center;
   justify-content: space-around;
 }
