Change In Store, and Styles Principal Added

--- a/src/stylesheets/views.css
+++ b/src/stylesheets/views.css
@@ -16,3 +16,9 @@
 .ant-breadcrumb > span:last-child a {
   color: #1890ff
 }
+.group-button-icon{
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  margin-right: 50px;
+}
