--- a/src/stylesheets/aplication.css
+++ b/src/stylesheets/aplication.css
@@ -4,6 +4,8 @@
   border: none;
   background-color: transparent;
   color: white;
+  background-color: transparent !important;
+  font-size: "18px"
 }
 
 .site-layout-content {
