--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -2,11 +2,35 @@
   display: flex;
   background: linear-gradient(270deg, #56A7F2 27.97%, rgba(255, 255, 255, 0) 83.44%), #2E52F8;
   box-shadow: 1px 0px 4px rgba(0, 0, 0, 0.15);
-  align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .anticon-white{
   color: white;
   font-size: 20px;
+}
+.group-icon{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 130px;
+}
+.head {
+  display: grid;
+  grid-template-columns: 40% 32% 28%;
+  grid-template-rows: 15% 70% 15%;
+  height: 54px;
+  width: 100%;
+}
+.grid-options{
+  grid-column-start: 1;
+  grid-row: 2;
+  display: flex;
+  justify-content: space-around;
+}
+.grid-user{
+  grid-column-start: 3;
+  grid-row: 2;
+  display: flex;
+  justify-content: space-around;
 }
 
