--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -13,24 +13,15 @@
   align-items: center;
   justify-content: space-between;
   width: 130px;
+  margin-right: 30px;
 }
-.head {
-  display: grid;
-  grid-template-columns: 40% 32% 28%;
-  grid-template-rows: 15% 70% 15%;
-  height: 54px;
-  width: 100%;
-}
-.grid-options{
-  grid-column-start: 1;
-  grid-row: 2;
+
+.head-options{
   display: flex;
-  justify-content: space-around;
+  align-items: center;
 }
-.grid-user{
-  grid-column-start: 3;
-  grid-row: 2;
+.head-user{
   display: flex;
-  justify-content: space-around;
+  align-items: center;
 }
 
